# CharlieAssistant

./: .env.example  .gitignore  main.py  pyproject.toml
core/: App.py  __init__.py  bootstrap.py
core/commands/: SkillsInfoCommand.py  TestMsgCommand.py  ThemeChangeCommand.py  __init__.py
core/exeptions/: NoClientError.py  NoModelError.py  NoPortError.py  NoProviderError.py  __init__.py
core/general/: Config.py  __init__.py
core/general/agent/: Assistant.py  ToolBuilder.py
core/general/agent/services/: DockerService.py  MIREAScheduleService.py  RulesHelperService.py  SystemService.py  TelegramService.py  WebSearchService.py  __init__.py
core/general/agent/tools/: DockerTool.py  MIREAScheduleTool.py  RulesHelperTool.py  SystemManagementTool.py  TelegramTool.py  WebSearchTool.py  __init__.py
core/interfaces/: ICommand.py  ITool.py  __init__.py
core/prompts/: MainSystemPrompt.py
core/providers/: BaseAIProvider.py  OllamaAIProvider.py  OpenAIProvider.py  __init__.py
core/static/: ASCII_LETTERS.py
core/stores/: CacheStore.py  DialogStore.py  __init__.py
core/types/ai/: AIAssistant.py  AIChunk.py  AIRequest.py  AITools.py  __init__.py
core/types/chat/: Chat.py  Dialog.py  __init__.py
core/ui/: ThemeLoader.py
core/ui/components/chat/: CharlieChatApp.py  ChatBubble.py  CommandPalette.py  __init__.py
core/ui/components/general/: ASCIIDrawer.py  __init__.py
core/ui/css/: CSS.py  __init__.py
core/ui/css/styles/: ChatCSS.py  (+7 more)
core/utils/: time.py
data/docs/: CHARLIE_TOOLS.md  GOST_DESIGN_RULES.md
data/themes/: dark_blue.json  dark_orange.json
(+5 files in other folders)
