[project]
name = "charlie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "textual>=0.80.0",
]
